<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View_Job">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="160dp">

            <TextView
                android:id="@+id/companyName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:text="TextView"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="265dp" />

            <TextView
                android:id="@+id/posCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:text="TextView"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/dtApplied"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:text="TextView"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:text="Contact"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:text="TextView"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:text="TextView"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:text="TextView"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/currStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:text="Current Status"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="Change Status"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/statusSelector"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/gradient_spinner"
                android:entries="@array/status_list"
                android:prompt="@string/status_prompt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="16dp">

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#e4665a"
                    android:text="@string/delete"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="427dp" />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/save"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="427dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>