<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Job_Activity">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:isScrollContainer="true"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="241dp">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:text="Add your Job Application"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/comText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Company Name"
                android:inputType="text"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/jobText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Job Role"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/dateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Date Applied (DD/MM/YY)"
                android:inputType="date"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/locText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Job Location"
                android:inputType="text"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/conText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Company Contact Name"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Contact Email"
                android:inputType="textEmailAddress"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/phoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Contact Number"
                android:inputType="text"
                android:textSize="24sp"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="Select Status"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerStatus"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/gradient_spinner"
                android:entries="@array/status_list"
                android:prompt="@string/status_prompt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="16dp">

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#e4665a"
                    android:text="@string/cancel"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="427dp" />

                <Button
                    android:id="@+id/addButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/add"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="427dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>